fix-some-nuance-fonts,margin, flex-wrap

--- a/css/master.css
+++ b/css/master.css
@@ -185,8 +185,14 @@
 }
 
 .tag {
-    font-size: 1.7em;
+    font-size: 2.2em;
     color: #ffffff;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.tag-indent {
+    margin-top: 10px;
 }
 
 .container__tag {
@@ -239,7 +245,7 @@
 
 .wrap-contact {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
