--- a/css/media.css
+++ b/css/media.css
@@ -413,7 +413,7 @@
     }
 
     .according__head {
-        font-size: 14.5px;
+        font-size: 13px;
     }
 
     .contact-txt {
